--- a/src/style.css
+++ b/src/style.css
@@ -47,6 +47,17 @@ body {
     top: 0;
 }
 
+#leftDiv{
+    margin-top: 2%;
+    display: flex;
+    flex-direction: column;
+}
+
+#gifContainer{
+    width: 100%;
+    height: fit-content;
+}
+
 input {
     width: 100%;
     height: fit-content;
