--- a/src/style.css
+++ b/src/style.css
@@ -333,7 +333,8 @@ h2 {
 }
 
 .observation-cell>p{
-    width: 100%;
+    max-width: 300px; /* Max width for the container */
+    font-size: 1vw;
     text-align: center;
     font-weight: bold;
 }
@@ -360,9 +361,18 @@ h2 {
     height: 100%;
     display: flex;
     flex-direction: column;
-    padding: 2% 1%;
+    padding: 2% 0%;
     align-items: center;
     justify-content: space-between;
+}
+
+.weekly-div>img{
+    width: 60%;
+}
+
+.weekly-div>p{
+    max-width: 300px; /* Max width for the container */
+    font-size: 1.5vw;
 }
 
 #day1{
