--- a/src/style.css
+++ b/src/style.css
@@ -357,7 +357,6 @@ h2 {
     width: 100%;
     height: 40%;
     gap: 0;
-    background-color: #0072ff;
     border-radius: 1em;
 }
 
@@ -383,24 +382,36 @@ h2 {
 #day1{
     background-color: #3a6a9291;
     border-radius: 1em 0 0 1em;
+    transition: opacity 1s linear;
 }
-
 #day2{
     background-color: rgba(38,88,133,.7);
+    transition-delay: 1s;
+    transition: opacity 1s linear;
 }
 #day3{
     background-color: rgba(34,82,125,.7);
+    transition-delay: 2s;
+    transition: opacity 1s linear;
 }
 #day4{
     background-color: rgba(26,72,116,.7);
+    transition-delay: 4s;
+    transition: opacity 1s linear;
 }
 #day5{
     background-color: rgba(23,67,109, .7);
+    transition-delay: 5s;
+    transition: opacity 1s linear;
 }
 #day6{
     background-color: rgba(18,60,90, .7);
+    transition-delay: 6s;
+    transition: opacity 1s linear;
 }
 #day7{
     background-color: rgba(10,50,80, .7);
     border-radius: 0 1em 1em 0;
+    transition-delay: 7s;
+    transition: opacity 1s linear;
 }
